--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="primary_light_color">#B7935F</color>
+    <color name="text_light_color">#242424</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary_dark_color">#101627</color>
+    <color name="text_dark_color">#FACC1A</color>
 </resources>
