--- a/app/src/main/res/layout-v28/activity_hadeth_details.xml
+++ b/app/src/main/res/layout-v28/activity_hadeth_details.xml
@@ -11,23 +11,51 @@
         android:id="@+id/hadeth_backArrow"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="15dp"
         android:src="@drawable/ic_back"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/hadeth_contect"
+        android:id="@+id/hadeth_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/hadeth_backArrow"
         tools:text="الفاتحة" />
+
+    <View
+        android:id="@+id/botton_line"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/primary_light_color"
+        app:layout_constraintTop_toBottomOf="@id/hadeth_title" />
+
+    <ScrollView
+
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingHorizontal="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/botton_line"
+        android:layout_marginVertical="20dp"
+        >
+
+        <TextView
+            android:id="@+id/hadeth_contect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            tools:text="الفاتحة" />
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
