--- a/app/src/main/res/layout-v28/quarn_item_recylcer.xml
+++ b/app/src/main/res/layout-v28/quarn_item_recylcer.xml
@@ -10,7 +10,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,9 +19,10 @@
     <View
         android:id="@+id/botton_line"
         android:layout_width="match_parent"
-        android:layout_height="3dp"
+        android:layout_height="1dp"
         app:layout_constraintTop_toBottomOf="@id/sura_name"
         android:background="@color/primary_light_color"
+        android:layout_marginHorizontal="20dp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
